Added style.css and mobile.css

--- a/project_07_Newsgrid_website/css/style.css
+++ b/project_07_Newsgrid_website/css/style.css
@@ -140,6 +140,33 @@ h1,h2,h3,h4,h5,h6 {
 .p-2 { padding: 2rem }
 .p-3 { padding: 3rem }
 
+.l-heading {
+  font-size: 3rem; 
+}
+
+.list li {
+  padding: 0.5rem 0;
+  border-bottom: #555 dotted 1px;
+  width: 90%;
+}
+
+.list li a:hover {
+  color: var(--primary-color) !important   ;
+}
+
+/* Inner Page  grid Container */
+
+.page-container {
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  margin: 2rem 0;
+  grid-gap: 1.5rem;
+}
+
+.page-container > *:first-child {
+  grid-row: 1 / span 3;
+}
+
 /* Navigation */
 
 #main-nav {
@@ -191,6 +218,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 /* Showcase */
+
 #showcase {
   color: #fff;
   background: #333;
@@ -244,6 +272,120 @@ h1,h2,h3,h4,h5,h6 {
 #home-articles .articles-container > *:last-child {
   grid-column: 2/ span 2;
 }
+
+#article .meta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #eee;
+  padding: 0.5rem;
+}
+
+#article .meta.category {
+  margin-top: 0.4rem;
+} 
+
+#article .meta i {
+ margin-right:0.5rem ;
+}
+
+/* Footer */
+
+#main-footer {
+  background: var(--dark-color);
+  color: #fff;
+}
+
+#main-footer img {
+  width: 150px;
+}
+
+#main-footer a {
+  color: #fff;
+}
+
+#main-footer .footer-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1.5rem;
+}
+
+#main-footer .footer-container >*:last-child {
+  background: #444;
+  grid-column: 1 / span 4;
+  padding: 0.5rem;
+  text-align: center;
+  font-size: 0.75rem;
+}
+
+#main-footer .footer-container input[type='email'] {
+  width: 90%;
+  padding: 0.5rem;
+  margin-bottom:0.5rem ;
+  margin-top: 1rem;
+}
+
+#main-footer .footer-container input[type='submit'] {
+  width: 90%;
+  margin-top: 0.5rem;
+} 
+
+#main-footer .footer-container >*:nth-child(4) a {
+  margin-top: 1rem;
+}
+
+p {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
